--- a/gain_tuning.ui
+++ b/gain_tuning.ui
@@ -75,6 +75,20 @@
           <property name="toolTip">
            <string/>
           </property>
+          <property name="onColor" stdset="0">
+           <color>
+            <red>252</red>
+            <green>33</green>
+            <blue>37</blue>
+           </color>
+          </property>
+          <property name="offColor" stdset="0">
+           <color>
+            <red>41</red>
+            <green>200</green>
+            <blue>50</blue>
+           </color>
+          </property>
           <property name="showLabels" stdset="0">
            <bool>false</bool>
           </property>
@@ -105,6 +119,20 @@
          <widget class="PyDMByteIndicator" name="amp_high_byte">
           <property name="toolTip">
            <string/>
+          </property>
+          <property name="onColor" stdset="0">
+           <color>
+            <red>252</red>
+            <green>33</green>
+            <blue>37</blue>
+           </color>
+          </property>
+          <property name="offColor" stdset="0">
+           <color>
+            <red>41</red>
+            <green>200</green>
+            <blue>50</blue>
+           </color>
           </property>
           <property name="showLabels" stdset="0">
            <bool>false</bool>
@@ -156,6 +184,20 @@
           <property name="toolTip">
            <string/>
           </property>
+          <property name="onColor" stdset="0">
+           <color>
+            <red>252</red>
+            <green>33</green>
+            <blue>37</blue>
+           </color>
+          </property>
+          <property name="offColor" stdset="0">
+           <color>
+            <red>41</red>
+            <green>200</green>
+            <blue>50</blue>
+           </color>
+          </property>
           <property name="showLabels" stdset="0">
            <bool>false</bool>
           </property>
@@ -175,6 +217,20 @@
          <widget class="PyDMByteIndicator" name="phase_low_byte">
           <property name="toolTip">
            <string/>
+          </property>
+          <property name="onColor" stdset="0">
+           <color>
+            <red>252</red>
+            <green>33</green>
+            <blue>37</blue>
+           </color>
+          </property>
+          <property name="offColor" stdset="0">
+           <color>
+            <red>41</red>
+            <green>200</green>
+            <blue>50</blue>
+           </color>
           </property>
           <property name="showLabels" stdset="0">
            <bool>false</bool>
